# alpha_research

./: .gitignore  README.md  main.py  modeling.py  preprocessing.py  pyproject.toml  scraper.py  visuals.py
data/: GS1_data.json  calls.pkl  puts.pkl  tickers.json
resources/selected_plots/: readme.txt
src/: config.py  main.py  utils.py  visuals_utils.py
src/data_prep/: data_aquisition.py  preprocessing.py  rv_garch.py
src/modeling/: backtest.py  option_net.py  rv_garch.py  train_utils.py
src/preprocessing/: preprocessing.py
