[project]
name = "bs-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arch>=7.2.0",
    "curl-cffi>=0.13.0",
    "dotenv>=0.9.9",
    "finnhub-python>=2.4.23",
    "fredapi>=0.5.2",
    "lxml>=5.4.0",
    "matplotlib>=3.10.1",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "pyarrow>=22.0.0",
    "scipy>=1.15.2",
    "yfinance>=0.2.57",
]
